--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
     "imagemin-jpeg-recompress": "^5.1.0",
-    "node-bourbon": "^4.2.8",
-    "npm": "^6.4.1"
+    "node-bourbon": "^4.2.8"
   }
 }
