--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-# Dist folder goes to gh-pages branch
-dist/
-
-# Remove sourcemaps
-*.map
-
+# Created by .ignore support plugin (hsz.mobi)
+### Node template
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -35,14 +30,14 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
+# Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
+# TypeScript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -62,72 +57,32 @@ typings/
 
 # dotenv environment variables file
 .env
+env
 
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# parcel-bundler cache (https://parceljs.org/)
+.cache
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+# next.js build output
+.next
 
-# Generated files
-.idea/**/contentModel.xml
+# nuxt.js build output
+.nuxt
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+# Nuxt generate
+dist
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+# vuepress build output
+.vuepress/dist
 
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+# Serverless directories
+.serverless
 
-# CMake
-cmake-build-*/
+# IDE / Editor
+.idea
+.editorconfig
 
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+# Service worker
+sw.*
 
-# File-based project format
-*.iws
-
-# IntelliJ
-out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# Mac OSX
+.DS_Store
