--- a/package.json
+++ b/package.json
@@ -1,25 +1,47 @@
 {
-  "name": "PowerSlime.github.io",
+  "name": "powerslime-github-io",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple page about me",
   "main": "gulpfile.js",
   "scripts": {
-    "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "analyze": "cross-env ANALYZE=true npm run build",
+    "build": "next build",
+    "dev": "next",
+    "export": "npm run build && next export -o dist",
+    "lint:check": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix .",
+    "start": "next start",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.24.7",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.3.0",
-    "gulp-sass": "^4.0.1",
-    "imagemin-jpeg-recompress": "^5.1.0",
-    "node-bourbon": "^4.2.8"
+    "@types/next": "^9.0.0",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "prettier": "^2.0.5",
+    "prop-types": "^15.7.2"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^4.2.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "antd": "^4.5.1",
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "i18next": "^19.6.3",
+    "next": "^9.5.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
+    "sass": "^1.26.10",
+    "swr": "^0.2.3"
   }
 }
